--- a/playbook.yml
+++ b/playbook.yml
@@ -8,22 +8,19 @@
 
   tasks:
 
-  - name: Determining username
-    action: shell whoami
-    register: whoami
-    sudo: False
-
   - name: Installing zsh, vim, git, tmux, etc.
-    action: yum pkg=$item state=latest
+    sudo: true
+    action: apt name={{ item }} state=latest update_cache=yes
     with_items:
     - zsh
-    - vim-enhanced
+    - vim-nox
     - git
     - tmux
     - htop
 
   - name: Changing the default shell to zsh
-    action: user shell=/bin/zsh user=${whoami.stdout}
+    sudo: true
+    action: user shell=/usr/bin/tmux user=abdulkadir
 
 - name: Entering Plugin Nirvana
   hosts: all
@@ -32,7 +29,7 @@
   tasks:
 
   - name: Backing up existing ~/.zshrc
-    action: shell if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi
+    action: shell if [ -f ~/.zshrc ]; then mv ~/.zshrc ~/.zshrc.orig; fi
 
   - name: Installing oh-my-zsh (https://github.com/robbyrussell/oh-my-zsh)
     action: git repo=https://github.com/robbyrussell/oh-my-zsh dest=~/.oh-my-zsh
@@ -42,3 +39,6 @@
 
   - name: Installing spf13-vim, The Ultimate Vim Distribution (http://vim.spf13.com)
     action: shell curl http://j.mp/spf13-vim3 -L -o - | sh
+
+  - name: Setting zsh as default for tmux configuration
+    action: shell echo "set -g default-command /usr/bin/zsh" > ~/.tmux.conf
