--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,3 @@
-# An ansible playbook that sets up a tricked-out vim/zsh/tmux environment
-#
-# Author: Luke Macken <lmacken@redhat.com>
 ---
 
 - name: Bootstrapping developer environment
@@ -17,10 +14,24 @@
     - git
     - tmux
     - htop
+    - curl
+
+  - name: Installing pathogen.vim
+    action: shell mkdir -p ~/.vim/autoload ~/.vim/bundle && curl -LSso ~/.vim/autoload/pathogen.vim https://tpo.pe/pathogen.vim
+
+  - name: Changing ghostscript executable
+    sudo: true
+    shell: if [ -f /usr/bin/gs ]; then mv /usr/bin/gs /usr/bin/ghostscript; fi
 
   - name: Changing the default shell to zsh
     sudo: true
     action: user shell=/usr/bin/tmux user=abdulkadir
+
+  - name: Cloning scmbreeze
+    action: shell git clone git://github.com/ndbroadbent/scm_breeze.git ~/.scm_breeze
+
+  - name: running install scmbreeze.sh
+    action: shell ~/.scm_breeze/install.sh
 
 - name: Entering Plugin Nirvana
   hosts: all
