--- a/removeall.yml
+++ b/removeall.yml
@@ -6,8 +6,8 @@
 
   tasks:
 
-    - shell: rm -rf ~/.vim ~/.scm_breeze ~/.zshrc ~/.oh-my-zsh ~/.spf13-vim-3
+    - shell: rm -rf ~/.vim* ~/.scm_breeze ~/.zshrc ~/.oh-my-zsh ~/.spf13-vim-3
     - shell: rm -rf ~/.tmux.conf go1.4.1.linux-amd64.tar.gz ~/apps/go/ ~/projects/oss/gopath
     - name: Changing the default shell to bash
       sudo: true
-      action: user shell=/bin/bash user=abdulkadir 
+      action: user shell=/bin/bash user=abdulkadir
