adding when-changed python module

--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -71,6 +71,17 @@
   sudo: true
   action: shell easy_install -U pip
 
+- name:  installing pyinotify
+  sudo: true
+  action: shell pip install pyinotify
+
+- name: installing when-changed 
+  sudo: true
+  action: shell pip install https://github.com/joh/when-changed/archive/master.zip
+
+
+
+
 - name: installing tmuxinator 
   sudo: true
   action: shell gem install tmuxinator
