--- a/tasks/vim.yml
+++ b/tasks/vim.yml
@@ -9,6 +9,10 @@
   args:
     creates: ~/.vim/bundle/vim-go
 
+- shell: git clone git://github.com/shime/vim-livedown.git ~/.vim/bundle/vim-livedown
+  args:
+    creates: ~/.vim/bundle/vim-livedown
+
 - shell: git clone --depth=1 https://github.com/majutsushi/tagbar.git ~/.vim/bundle/tagbar
   args:
     creates: ~/.vim/bundle/tagbar
